# cadlang

./: .gitignore  CLAUDE.md  FOLLOW_UP.md  README.md  ROADMAP.md  assembly.py  cadlang.py  gui.py  pyproject.toml  requirements.txt  sketch.py  stepimport.py
.claude/skills/import-step/: SKILL.md
.claude/skills/invoke-local/: SKILL.md
.claude/skills/launch-gui/: SKILL.md
.claude/skills/new-part/: SKILL.md
.claude/skills/new-project/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.github/workflows/: ci.yml
example-project/SWQ8-Dewshield-Holder/: DewShield.measurements.json  STATE.md  SWQ8DewShieldHolder.step  assembly.yaml  project.cadlang
example-project/SWQ8-Dewshield-Holder/parts/: SWQ8_part001.g.cad.py  SWQ8_part001.g.measurements.json  SWQ8_part002.g.cad.py  SWQ8_part002.g.measurements.json  overlap_ring.cad.py  overlap_ring.measurements.json  overlap_ring.stl  overlap_ring_fusion.py
spike/: sketch_spike.py
tests/: conftest.py  test_assembly.py  test_geometry.py  test_sketch.py  test_stepimport.py
